# Algorithms_C

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: c-cpp.yml  ci.yml
Algorithms_C/: .clang-tidy  CMakeLists.txt  Makefile
Algorithms_C/examples/dp_solutions_from_page/: damerau_levenstein.c  genhard.c  minknap.c
Algorithms_C/include/: logger.c  logger.h  macros.h  minunit.c  minunit.h  mystrcat.c  mystrdup.c
Algorithms_C/include/algorithms_c/algorithms/: array_count_sort.h  binary_search.h  bounds.h  compare.h  damerau_levenshtein.h  genhard.h  minknap.h  real_binary_search.h  sorting.h  split_find.h  ternary_search.h
Algorithms_C/include/algorithms_c/structures/: deque.h  heap.h  matrix_view.h  queue.h  slist.h  stack.h  vector.h
Algorithms_C/include/algorithms_c/utils/: logger.h  minunit.h
Algorithms_C/scripts/: check-format.sh  gcov_coverage.py  run_coverage.sh
Algorithms_C/src/algorithms/: array_count_sort.c  binary_search.c  bounds.c  bubble_sort.c  comb_sort.c  compare.c  counting_sort.c  damerau_levenshtein.c  digit_sort.c  genhard.c  heap_sort.c  insertion_sort.c  merge_sort.c  minknap.c  quick_sort.c  real_binary_search.c  selection_sort.c  shell_sort.c  split_find.c  ternary_search.c
Algorithms_C/src/code/: array_count_sort.c  compare.c  matrix_view.c
Algorithms_C/src/headers/: compare.h  matrix_view.h
Algorithms_C/src/structures/: deque.c  heap.c  matrix_view.c  queue.c  slist.c  stack.c  vector.c
Algorithms_C/src/utils/: logger.c  minunit.c
Algorithms_C/test/runners/: all_tests.c
Algorithms_C/test/test/: test_array_count_sort.c
Algorithms_C/tests/helpers/: all_tests.c
Algorithms_C/tests/stress/: reference_deque_model.h  sorting_stress.c  structures_stress.c
Algorithms_C/tests/unit/: test_array_count_sort.c  test_binary_search.c  test_bounds.c  test_damerau_example_wrapper.c  test_damerau_levenshtein.c  test_deque.c  test_genhard.c  test_heap.c  test_minknap.c  test_queue.c  test_real_binary_search.c  test_slist.c  test_sorting.c  test_split_find.c  test_stack.c  test_ternary_search.c  test_utils.c  test_vector.c
scripts/: check-format.sh  run_coverage.sh
src/algorithms/: quick_sort.c
src/structures/: vector.c
tests/stress/: sorting_stress.c
tests/unit/: test_array_count_sort.c  test_queue.c  test_stack.c
